Bug 67397 - Crash when color grid is minimized
Summary: Crash when color grid is minimized
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-27 13:11 UTC by Eduardo Grosclaude
Modified: 2013-07-28 17:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
backtrace (2.12 KB, text/plain)
2013-07-28 16:49 UTC, Ivan Timofeev (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eduardo Grosclaude 2013-07-27 13:11:10 UTC
Dragging downwards the resize handle of the color grid at the bottom, past beyond or equal 0 height makes Draw crash and close. Upon restart, successfully recovers files or drafts being edited.
Comment 1 Ivan Timofeev (retired) 2013-07-28 16:49:30 UTC
Created attachment 83132 [details]
backtrace

Confirmed. Taking this one.
Comment 2 Commit Notification 2013-07-28 17:03:49 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd6518d42fce1416fa00f80a7b7dead113c37752

fdo#67397: don't bother to create BlendFrame for width == 1 or height == 1



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-07-28 17:54:28 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c30fad2fcee46d98a9a2da4cf0c0470f5cc7f34e&h=libreoffice-4-1

fdo#67397: don't bother to create BlendFrame for width == 1 or height == 1


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Ivan Timofeev (retired) 2013-07-28 17:58:58 UTC
Fixed, thanks for the report.