fdo#67397: don't bother to create BlendFrame for width == 1 or height == 1

... because:
1) frame painted as a line doesn't make sense to me anyway;
2) it leads to x = 1 or y = 1 in createBlendFrame, while the max value for that
   variable is "width (or height) - 1", i.e. 0.

Change-Id: I7437bce6681e42cb57458c012927cf5d6bfc154f